# demucs.axera

./: .gitignore  README.md  apply.py  cal_demucs.py  download_models.sh  main.py  main_onnx.py
cpp/: CMakeLists.txt  download_bsp.sh  main.cpp  run_model.cpp
cpp/cmake/: 3rdparty.cmake  msp_dependencies.cmake
cpp/src/: EngineWrapper.cpp  EngineWrapper.hpp  TensorChunk.hpp  cal_demucs.hpp  common.h  fft.cpp  fft.h
cpp/src/utils/: io.hpp
model_convert/: README.md  export_onnx.py  htdemucs.json  htdemucs_5s.json  onnx_infer_shape.py  prune_onnx_model.py  requirements.txt  test_stft.py
model_convert/demucs/: htdemucs.py  states.py  stft_process.py
python/: app.py  apply.py  audio.py  cal_demucs.py  compare.py  demucs_cls.py  main.py  main_onnx.py  main_sim.py  requirements.txt  stream.py
python/axengine/: _handle.py
